--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -28,8 +28,6 @@
 		  }
 		}
 	  </script>
-	<!-- Social Icon fonts -->
-	<link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?u8vidh">
 	<link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/styles.css">
 	<!-- Including google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
@@ -37,7 +35,7 @@
 	<!-- Font awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-
+	<link rel="icon" href="/favicon.ico"> 
 	<!-- Meta tags -->
 	<meta name="author" content="{{ $config.author }}">
 	<meta name="theme-color" content="#000000">
@@ -47,6 +45,9 @@
 	{{ end -}}
 		
 	{{ partial "seo_schema.html" . }}
+	{{ if .Site.Params.GoogleAnalyticsID }}
+		{{ partial "analytics-gtag.html" . }}
+	{{ end }}
 
 </head>
 <body class="clearfix">
