--- a/layouts/partials/projects.html
+++ b/layouts/partials/projects.html
@@ -13,7 +13,7 @@
         <h5 class="mt-4">{{ $element.title }}</h5>
         <p class="text-sm">{{ $element.description }}</p>
       </div>
-      <a href="{{ $element.website }}" class="button inline bg-black text-white py-2 px-8 uppercase text-sm font-bold">Visit Website</a>
+      <a href="{{ $element.website }}" target="_blank" class="button inline bg-black text-white py-2 px-8 uppercase text-sm font-bold">Visit Website</a>
     </div>
 
     {{ end }}
